Read more links no longer wrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -92,3 +92,7 @@ code {
 .page-nav {
     overflow: auto;
 }
+
+.read-more {
+    white-space: pre;
+}
